--- a/lib/components/fo_modal/fo_modal_component.html
+++ b/lib/components/fo_modal/fo_modal_component.html
@@ -18,7 +18,7 @@
           <material-button class="themeable"
                            clear-size
                            (trigger)="close()">
-            <material-icon icon="close"
+            <material-icon class="material-button" icon="close"
                            size="x-large"></material-icon>
           </material-button>
         </div>
