--- a/lib/components/fo_carousel/fo_carousel_component.html
+++ b/lib/components/fo_carousel/fo_carousel_component.html
@@ -19,7 +19,8 @@
          id="arrow-left">
       <material-button raised
                        clear-size
-                       (click)="stepBy(-1)">
+                       (click)="stepBy(-1)"
+                       class="no-hover">
         <material-icon icon="keyboard_arrow_left"></material-icon>
       </material-button>
     </div>
@@ -28,7 +29,8 @@
          id="arrow-right">
       <material-button raised
                        clear-size
-                       (click)="stepBy(1)">
+                       (click)="stepBy(1)"
+                       class="no-hover">
         <material-icon class="clickable"
                        icon="keyboard_arrow_right"></material-icon>
       </material-button>
