--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -63,7 +63,7 @@
             </thead>
             <tbody *ngIf="filteredKeys.isNotEmpty">
                 <tr *ngFor="let key of filteredKeys | range:firstIndex:lastIndex"
-                    (click)="onRowClickController.add(key)">
+                    (click)="onRowClick(key)">
                     <td *ngIf="showCheckboxes && data != null">
                         <material-checkbox [disabled]="errorFunction != null && errorFunction(data[key]) != null"
                                            [checked]="selectedRows.contains(key)"
@@ -162,7 +162,7 @@
                                [options]="rowOptions"
                                [sort]="false"
                                [selectedId]="selectedRowOptionId"
-                               (selectedIdChange)="selectedRowOptionId = $event; setIndices(0);">
+                               (selectedIdChange)="selectedRowOptionId = $event; setIndices(0); onRowsChangeController.add($event)">
                     </fo-select>
                 </div>
                 <div class="float-right">
