Removed onRowsChangeController reference from template

--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -163,7 +163,7 @@
                                [options]="rowOptions"
                                [sort]="false"
                                [selectedId]="selectedRowOptionId"
-                               (selectedIdChange)="selectedRowOptionId = $event; setIndices(0); onRowsChangeController.add($event)">
+                               (selectedIdChange)="selectedRowOptionId = $event; setIndices(0);">
                     </fo-select>
                 </div>
                 <div class="float-right">
