--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -26,7 +26,7 @@
 
 <div class="table-container box-shadow">
     <div class="output-container">
-        <p>{{filteredKeys}}</p>
+        <p>{{filteredKeys.length()}}</p>
         <table [class.faded]="disabled"
                class="output margin-bottom-x-small">
             <thead>
