Added accept input to fo-image-file

--- a/lib/components/fo_image_file/fo_image_file_component.html
+++ b/lib/components/fo_image_file/fo_image_file_component.html
@@ -30,7 +30,7 @@
   <input type="file"
          #fileInput
          (change)="onFileChange($event)"
-         accept="image/jpg,image/jpeg,image/png,image/gif" />
+         [accept]="accept" />
   <p *ngIf="invalidFile"
      class="error-output">{{msg.invalid_file()}}</p>
 </div>
