Make sure sidebar doesn't take up space on print, and added null check to datatable

--- a/lib/components/fo_app_layout/fo_app_layout_component.html
+++ b/lib/components/fo_app_layout/fo_app_layout_component.html
@@ -2,7 +2,7 @@
   <table>
     <tr>
       <!-- Sidebar -->
-      <td [style.width]="sidebarWidth">
+      <td [style.width]="sidebarWidth" id="sidebarCol">
         <div id="sidebar"
              class="box-shadow"
              [style.width]="sidebarWidth">
