No longer padding top 0 on print

--- a/lib/components/fo_app_layout/fo_app_layout_component.scss
+++ b/lib/components/fo_app_layout/fo_app_layout_component.scss
@@ -142,7 +142,7 @@
           }
           td {
             div#main-row {
-              padding-top: 0 !important;
+              //padding-top: 0 !important;
               div#page-header {
                 display: none;
               }
