Rating stars now has user-select: none

--- a/lib/components/fo_rating/fo_rating_component.scss
+++ b/lib/components/fo_rating/fo_rating_component.scss
@@ -1,4 +1,9 @@
 :host {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  
   material-icon {
     cursor: pointer;
   }
