Youtube player can now be added more than once to a page

--- a/lib/components/fo_youtube_player/fo_youtube_player_component.scss
+++ b/lib/components/fo_youtube_player/fo_youtube_player_component.scss
@@ -9,7 +9,7 @@
   height: 0;
   overflow: hidden; 
 
-  iframe, .overlay
+  ::ng-deep iframe#youtube-player-container, .overlay
   {
     cursor: pointer;
     position: absolute;
