cleaned up mixins

--- a/lib/components/fo_data_table/fo_data_table_component.scss
+++ b/lib/components/fo_data_table/fo_data_table_component.scss
@@ -1,5 +1,5 @@
-@import 'package:grid/grid';
-@import '../../colors.scss';
+@import '../../mixins.scss';
+
 :host {
     display: block;
     width: 100%;
