--- a/lib/components/fo_image_map/fo_image_map_component.html
+++ b/lib/components/fo_image_map/fo_image_map_component.html
@@ -25,7 +25,7 @@
                       [attr.transform]="rectangle.transform">
                 </rect>
                 <polygon *ngFor="let polygon of zone.polygons"
-                         class="shape"
+                         class="shape background-color-alert"
                          [class.visible]="selectedIds.contains(zone.id)"
                          [attr.points]="polygon.points"
                          [attr.transform]="polygon.transform">
