FoTextInput and FoButton

--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -135,7 +135,7 @@
                                  [disabled]="disabled || data?.isEmpty == true"
                                  [materialTooltip]="msg.download_csv()"
                                  (trigger)="onDownloadDataCSV()">
-                    <material-icon class="color-black"
+                    <material-icon class="black-color"
                                    size="medium"
                                    icon="file_download"></material-icon>
                 </material-button>
@@ -147,7 +147,7 @@
                                  [disabled]="disabled"
                                  [materialTooltip]="msg.add()"
                                  (trigger)="onAddController.add('')">
-                    <material-icon class="color-black"
+                    <material-icon class="black-color"
                                    size="medium"
                                    icon="add"></material-icon>
                 </material-button>
