--- a/lib/mixins.scss
+++ b/lib/mixins.scss
@@ -1,66 +1,114 @@
 @import 'package:angular_components/material_dialog/mixins';
+@mixin foregroundColor($color) {
+  color: $color;
+  border-color: $color;
+  stroke: $color;
+}
 
-@mixin fo-colors($primaryColor, $secondaryColor, $alertColor) {    
-    ::ng-deep material-dialog.themeable {
-        @include material-dialog-header-color($primaryColor !important);
-        div.wrapper>header {
-            div.flexContainer {
-                h3.themeable {
-                    color: white !important;
-                }
-                div#closeButtonContainer {
-                    material-button.themeable {
-                        color: white !important;
-                    }
-                }
-            }
+@mixin backgroundColor($color) {
+  background-color: $color;
+  fill: $color;
+}
+
+@mixin fo-colors($primaryColor, $secondaryColor, $alertColor, $grayColor: #8d8e92, $grayColorBright: #d9dade) {
+  $lightstep: 20%;
+  $primaryColorDark: darken($primaryColor, $lightstep);
+  $primaryColorBright: lighten($primaryColor, $lightstep);
+  $secondaryColorDark: darken($secondaryColor, $lightstep);
+  $secondaryColorBright: lighten($secondaryColor, $lightstep);
+  $alertColorDark: darken($alertColor, $lightstep);
+  $alertColorBright: lighten($alertColor, $lightstep);
+  ::ng-deep material-dialog.themeable {
+    @include material-dialog-header-color($primaryColor !important);
+    div.wrapper>header {
+      div.flexContainer {
+        h3.themeable {
+          color: white !important;
         }
+        div#closeButtonContainer {
+          material-button.themeable {
+            color: white !important;
+          }
+        }
+      }
     }
-    ::ng-deep .color-primary {
-      color: $primaryColor;
-    }
-    ::ng-deep .background-color-primary {
-      background-color: $primaryColor;
-      fill: $primaryColor;
-    }
-    ::ng-deep .color-primary-bright {
-      color: lighten($primaryColor, 20%);
-    }
-    ::ng-deep .background-color-primary-bright {
-      background-color: lighten($primaryColor, 20%);
-      fill: lighten($primaryColor, 20%);
-    }
-    ::ng-deep .color-secondary {
-      color: $secondaryColor;
-    }    
-    ::ng-deep .background-color-secondary {
-      background-color: $secondaryColor;
-      fill: $secondaryColor;
-    }
-    ::ng-deep .color-secondary-bright {
-      color: lighten($secondaryColor, 20%);
-    }
-    ::ng-deep .background-color-secondary-bright {
-      background-color: lighten($secondaryColor, 20%);
-      fill: lighten($secondaryColor, 20%);
-    }
-    ::ng-deep .color-alert {
-        color: $alertColor !important;
-    }
-    ::ng-deep .color-alert-bright {
-      color: lighten($alertColor, 20%);
-    }
-    ::ng-deep .background-color-alert {
-      background-color: $alertColor;
-      fill: $alertColor;
-    }
-    ::ng-deep .background-color-alert-bright {
-      background-color: lighten($alertColor, 20%);
-      fill: lighten($alertColor, 20%);
-    }
+  }
+  ::ng-deep fo-button>button:hover {
+    background-color: $secondaryColor;
+  }
+  ::ng-deep fo-button>button:disabled {
+    background-color: $grayColor;
+    border-color: $grayColor;
+  }
+  ::ng-deep input::placeholder {
+    color: $grayColorBright;
+  }
+  ::ng-deep .black-color {
+    @include foregroundColor(#333);
+  }
+  ::ng-deep .gray-color {
+    @include foregroundColor($grayColor);
+  }
+  ::ng-deep .border-color {
+    @include foregroundColor($grayColorBright);
+  }
+  ::ng-deep .color-primary-dark {
+    @include foregroundColor($primaryColorDark);
+  }
+  ::ng-deep .color-primary {
+    @include foregroundColor($primaryColor);
+  }
+  ::ng-deep .color-primary-bright {
+    @include foregroundColor($primaryColorBright);
+  }
+  ::ng-deep .background-color-primary-dark {
+    @include backgroundColor($primaryColorDark);
+  }
+  ::ng-deep .background-color-primary {
+    @include backgroundColor($primaryColor);
+  }
+  ::ng-deep .background-color-primary-bright {
+    @include backgroundColor($primaryColorBright);
+  }
+  ::ng-deep .color-secondary-dark {
+    @include foregroundColor($secondaryColorDark);
+  }
+  ::ng-deep .color-secondary {
+    @include foregroundColor($secondaryColor);
+  }
+  ::ng-deep .color-secondary-bright {
+    @include foregroundColor($secondaryColorBright);
+  }
+  ::ng-deep .background-color-secondary-dark {
+    @include backgroundColor($secondaryColorDark);
+  }
+  ::ng-deep .background-color-secondary {
+    @include backgroundColor($secondaryColor);
+  }
+  ::ng-deep .background-color-secondary-bright {
+    @include backgroundColor($secondaryColorBright);
+  }
+  ::ng-deep .color-alert-dark {
+    @include foregroundColor($alertColorDark);
+  }
+  ::ng-deep .color-alert {
+    @include foregroundColor($alertColor);
+  }
+  ::ng-deep .color-alert-bright {
+    @include foregroundColor($alertColorBright);
+  }
+  ::ng-deep .background-color-alert-dark {
+    @include backgroundColor($alertColorDark);
+  }
+  ::ng-deep .background-color-alert {
+    @include backgroundColor($alertColor);
+  }
+  ::ng-deep .background-color-alert-bright {
+    @include backgroundColor($alertColorBright);
+  }
 }
 
 @mixin boxShadow() {
-  -webkit-box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.4);
-  box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.4);
-} 
+  -webkit-box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.4);
+}
