--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -1,6 +1,6 @@
 <label>
   <div id="labelContainer"
-       class="gray-color"
+       class="gray-color margin-bottom-x-small"
        [class.color-alert]="!control.valid">
     <span>{{label}}</span>
     <material-icon *ngIf="!control.valid"
@@ -12,7 +12,7 @@
     <material-icon *ngIf="leadingIcon != null"
                    class="gray-color"
                    [icon]="leadingIcon"></material-icon>
-    <input class="roundLeft border-color"
+    <input class="roundLeft gray-color-bright"
            [disabled]="disabled == true"
            [placeholder]="placeholder"
            [class.leftBorder]="true"
@@ -28,7 +28,10 @@
                [disabled]="disabled || !control.valid"
                (trigger)="onActionButtonTrigger($event)"></fo-button>
   </div>
-  <div *ngIf="!control.valid">
-    <p>{{errorMessage | name}}</p>
+  <div *ngIf="!control.valid"
+       id="errorOutput"
+       class="gray-color-bright">
+    <div id="arrow" class="gray-color-bright"></div>
+    <div id="message" class="black-color">{{errorMessage | name}}</div>
   </div>
 </label>
