--- a/lib/mixins.scss
+++ b/lib/mixins.scss
@@ -18,6 +18,7 @@
   $secondaryColorBright: lighten($secondaryColor, $lightstep);
   $alertColorDark: darken($alertColor, $lightstep);
   $alertColorBright: lighten($alertColor, $lightstep);
+  
   ::ng-deep material-dialog.themeable {
     @include material-dialog-header-color($primaryColor !important);
     div.wrapper>header {
@@ -44,12 +45,12 @@
     color: $grayColorBright;
   }
   ::ng-deep .black-color {
-    @include foregroundColor(#333);
+    @include foregroundColor(#555);
   }
   ::ng-deep .gray-color {
     @include foregroundColor($grayColor);
   }
-  ::ng-deep .border-color {
+  ::ng-deep .gray-color-bright {
     @include foregroundColor($grayColorBright);
   }
   ::ng-deep .color-primary-dark {
