--- a/lib/components/fo_dropdown_list/fo_dropdown_option_component.html
+++ b/lib/components/fo_dropdown_list/fo_dropdown_option_component.html
@@ -1,1 +1,10 @@
-<p>{{model.label}}</p>
+<div>
+  <material-icon [icon]="model.icon"></material-icon>
+</div>
+<div>
+  <div class="black-color">{{model.label}}</div>
+  <div class="gray-color">{{model.secondaryLabel}}</div>
+</div>
+<div class="black-color">
+  <strong>{{model.info}}</strong>
+</div>
