--- a/lib/components/fo_dropdown_list/fo_dropdown_option_component.scss
+++ b/lib/components/fo_dropdown_list/fo_dropdown_option_component.scss
@@ -1,25 +1,29 @@
 @import 'package:grid/constants';
-
 :host {
   cursor: pointer;
   display: block;
   padding: $small 0;
   display: flex;
   align-items: center;
-
   div:nth-child(1) {
     text-align: center;
     width: $x-large;
   }
-  div:nth-child(2), div:nth-child(3) {
+  div:nth-child(2),
+  div:nth-child(3) {
     flex: auto;
+    overflow: hidden;    
+    white-space: nowrap;
   }
   div:nth-child(3) {
     text-align: right;
-    font-weight: bold;    
+    font-weight: bold;
     margin-right: $x-large;
-  }   
+    overflow: hidden;    
+    white-space: nowrap;
+  }
 }
+
 :host:hover {
   div {
     color: white !important;
