--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -40,7 +40,7 @@
   <fo-dropdown-list *ngIf="options != null && value?.isEmpty == false"
                     [options]="options"
                     [filter]="value"
-                    [width]="dropdownWidth"
+                    [width]="inputElement?.getBoundingClientRect()?.width?.toInt()"
                     (select)="onFilterSelect($event)"
                     [(visible)]="dropdownVisible">
   </fo-dropdown-list>
