Dropdown style fixes

--- a/lib/components/fo_dropdown_list/fo_dropdown_option_component.html
+++ b/lib/components/fo_dropdown_list/fo_dropdown_option_component.html
@@ -5,6 +5,6 @@
   <div class="black-color">{{model.label}}</div>
   <div class="gray-color">{{model.secondaryLabel}}</div>
 </div>
-<div class="black-color">
+<span class="black-color">
   <strong>{{model.info}}</strong>
-</div>
+</span>
