--- a/lib/components/fo_dropdown_list/fo_dropdown_option_component.scss
+++ b/lib/components/fo_dropdown_list/fo_dropdown_option_component.scss
@@ -9,13 +9,12 @@
     text-align: center;
     width: $x-large;
   }
-  div:nth-child(2),
-  div:nth-child(3) {
+  div:nth-child(2) {
     flex: auto;
     overflow: hidden;    
     white-space: nowrap;
   }
-  div:nth-child(3) {
+  span {
     text-align: right;
     font-weight: bold;
     margin-right: $x-large;
@@ -25,7 +24,7 @@
 }
 
 :host:hover {
-  div {
+  div, span {
     color: white !important;
   }
 }
