Removed maxHeight on small screen2

--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
@@ -24,5 +24,8 @@
   :host {
     position: fixed;
     z-index: 99;
+    div#dropdownContent {
+      max-height: none !important;
+    }    
   }
 }
