--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
@@ -2,14 +2,15 @@
 :host {  
   background-color: white;
   margin-top: $small;  
+  position: fixed;
+  z-index: 99;
 
   div#dropdownContent {
     padding-bottom: $medium;
     border-width: 1px;
     border-style: solid;
     border-radius: $x-small;
-    overflow-y: auto;    
-    max-height: none !important;    
+    overflow-y: auto;        
     div.category {
       margin: $large $x-large $small $x-large;
       text-transform: uppercase;
@@ -21,12 +22,11 @@
   }
 }
 
-@media screen and (min-width: $medium-width-threshold) {
-  :host {
-    position: fixed;
-    z-index: 99;    
+@media screen and (max-width: $medium-width-threshold - 1) {
+  :host {    
     div#dropdownContent {
-      max-height: initial;
-    }    
+      max-height: none !important;
+      position: relative;
+    }
   }
 }
